<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <RelativeLayout
            android:id="@+id/RL1StudentMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/Green_Pigment"
                android:id="@+id/toolbar"
                app:title="Student: Select Supervisor"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="4dp"/>

            <RelativeLayout
                android:id="@+id/RL2StudentPortalLinear"
                android:layout_width="match_parent"
                android:layout_height="321dp"
                android:layout_below="@+id/toolbar"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/greybacklogin">

                <TextView
                    android:id="@+id/student_selectsupervisorheading"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/Green"
                    android:paddingLeft="150dp"
                    android:text="Select Supervisor"
                    android:textColor="@color/White" />

                <Spinner
                    android:id="@+id/spinner1_supervisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/student_selectsupervisorheading"
                    android:layout_marginTop="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />


                <Button
                    android:id="@+id/student_addsupervisorbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner1_supervisor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/Green"
                    android:paddingLeft="10dp"
                    android:text="Select"
                    android:textColor="@color/White" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RLSearchProjects3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlack"
                android:layout_below="@+id/RL2StudentPortalLinear">
                <TextView
                    android:layout_marginTop="4dp"
                    android:id="@+id/Searchprojectsfooterheading1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    />
                <TextView
                    android:id="@+id/Searchprojectsfooterheading1para"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Searchprojectsfooterpara3"
                    android:layout_below="@id/Searchprojectsfooterheading1"
                    android:textColor="@color/lightgrey"
                    />
                <TextView
                    android:id="@+id/Searchprojectsfooterheading1linkpara3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Searchprojectsfooterheading1para"
                    android:text="@string/linktoAboutusSearchProjectsfooter"
                    />
                <TextView
                    android:layout_marginTop="4dp"
                    android:id="@+id/Searchprojectsfooterheading2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Searchprojectsfooterheading1linkpara3"
                    android:text="Solutions"
                    android:textStyle="bold"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/White"
                    />
                <TextView
                    android:id="@+id/SearchProjectsfooterheading2Pages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Searchprojectsfooterheading2"
                    android:text="@string/pagesSearchprojectsfooterheading2"
                    android:layout_marginLeft="24dp"
                    />
                <TextView
                    android:id="@+id/Searchprojectsfooterheading3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SearchProjectsfooterheading2Pages"
                    android:text="Latest News"
                    android:textStyle="bold"
                    android:textColor="@color/White"/>
                <TextView
                    android:id="@+id/SearchProjectsfooterlinksLatestNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linksLatestNewsSearchProjectsfooter"
                    android:layout_below="@+id/Searchprojectsfooterheading3"
                    android:textColor="@color/White"
                    />
                <TextView
                    android:id="@+id/Searchprojectsfooterheading4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Quick Contact"
                    android:textStyle="bold"
                    android:layout_below="@+id/SearchProjectsfooterlinksLatestNews"
                    android:textColor="@color/White"/>
                <TextView
                    android:id="@+id/Searchprojectsfooterheading4para"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Searchprojectsfooterheading4"
                    android:text="@string/quickcontactparaSearchProjects"
                    android:textColor="@color/lightgrey"
                    />
                <TextView
                    android:id="@+id/Searchprojectsfooterheading4Contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Searchprojectsfooterheading4para"
                    android:text="@string/quickcontactSearchProjects"
                    android:textColor="@color/lightgrey"
                    android:paddingLeft="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:layout_below="@+id/Searchprojectsfooterheading4Contact">
                    <TextView
                        android:id="@+id/SearchProjectslastline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lastlineSearchProjects"

                        />
                </RelativeLayout>




            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>